--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,11 @@ jobs:
         override: true
         components: rustfmt, clippy
     
-    - name: Check formatting
-      uses: actions-rs/cargo@v1
-      with:
-        command: fmt
-        args: --all -- --check
+#    - name: Check formatting
+#      uses: actions-rs/cargo@v1
+#      with:
+#        command: fmt
+#        args: --all -- --check
     
     - name: Lint with clippy
       uses: actions-rs/cargo@v1
