--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v*'
 
+# Explicitly define permissions needed for GitHub releases
+permissions:
+  contents: write
+
 jobs:
   create-release:
     name: Create Release
