ci: limit parallel execution to one for release job

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,7 @@ jobs:
     needs: create-release
     runs-on: ${{ matrix.os }}
     strategy:
+      max-parallel: 1
       matrix:
         include:
           - os: ubuntu-latest
