ci: replace manual ARM64 setup with cross tool for cross-compilation

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,23 +71,18 @@ jobs:
       - name: Install cross-compilation tools for ARM64
         if: runner.os == 'Linux' && matrix.target == 'aarch64-unknown-linux-gnu'
         run: |
-          # Enable multiarch support
-          sudo dpkg --add-architecture arm64
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
-          # Install ARM64 versions of the required libraries
-          sudo apt-get install -y libx11-dev:arm64 libxcb1-dev:arm64 libxcb-render0-dev:arm64 libxcb-shape0-dev:arm64 libxcb-xfixes0-dev:arm64
+          # Install cross tool for Rust cross-compilation
+          cargo install cross
 
       - name: Build target
         run: |
           if [ "${{ matrix.target }}" = "aarch64-unknown-linux-gnu" ]; then
-            export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc
-            export CC_aarch64_unknown_linux_gnu=aarch64-linux-gnu-gcc
-            export CXX_aarch64_unknown_linux_gnu=aarch64-linux-gnu-g++
-            # Set library path for ARM64 libraries
-            export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_RUSTFLAGS="-L /usr/aarch64-linux-gnu/lib"
+            # Use cross for ARM64 target
+            cross build --release --target ${{ matrix.target }}
+          else
+            # Use cargo for other targets
+            cargo build --release --target ${{ matrix.target }}
           fi
-          cargo build --release --target ${{ matrix.target }}
 
       - name: Prepare artifact [Windows]
         if: matrix.os == 'windows-latest'
