--- a/Cross.toml
+++ b/Cross.toml
@@ -1,5 +1,5 @@
 [target.aarch64-unknown-linux-gnu]
 pre-build = [
     "apt-get update",
-    "apt-get install -y python3"
+    "apt-get install -y python3 libxcb1-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev"
 ]
