--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,14 +28,14 @@ jobs:
       max-parallel: 1
       matrix:
         include:
-#          - os: ubuntu-latest
-#            target: x86_64-unknown-linux-gnu
-#            artifact_name: uuid
-#            asset_name: uuid-${{ needs.create-release.outputs.version }}-x86_64-linux
           - os: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
+            target: x86_64-unknown-linux-gnu
             artifact_name: uuid
-            asset_name: uuid-${{ needs.create-release.outputs.version }}-aarch64-linux
+            asset_name: uuid-${{ needs.create-release.outputs.version }}-x86_64-linux
+#          - os: ubuntu-latest
+#            target: aarch64-unknown-linux-gnu
+#            artifact_name: uuid
+#            asset_name: uuid-${{ needs.create-release.outputs.version }}-aarch64-linux
           - os: macos-latest
             target: x86_64-apple-darwin
             artifact_name: uuid
@@ -48,10 +48,10 @@ jobs:
             target: x86_64-pc-windows-msvc
             artifact_name: uuid.exe
             asset_name: uuid-${{ needs.create-release.outputs.version }}-x86_64-windows
-          - os: windows-latest
-            target: i686-pc-windows-msvc
-            artifact_name: uuid.exe
-            asset_name: uuid-${{ needs.create-release.outputs.version }}-i686-windows
+#          - os: windows-latest
+#            target: i686-pc-windows-msvc
+#            artifact_name: uuid.exe
+#            asset_name: uuid-${{ needs.create-release.outputs.version }}-i686-windows
 
     steps:
       - uses: actions/checkout@v4
