--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "1.0.0"
 edition = "2024"
 
 [dependencies]
-uuid = { version = "1.17.0", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "fast-rng", "macro-diagnostics"] }
+uuid_lib = { package = "uuid", version = "1.17.0", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "fast-rng", "macro-diagnostics"] }
 clap = { version = "4.5.40", features = ["derive"] }
 clipboard = "0.5.0"
