ci: update dependencies for uuid and clap in requirements.md and update version extraction in update-deps.yml

--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Extract dependency versions
         id: extract_versions
         run: |
-          UUID_VERSION=$(grep -oP 'uuid = \{ version = "\K[^"]+' Cargo.toml)
+          UUID_VERSION=$(grep -oP 'uuid_lib = \{ package = "uuid", version = "\K[^"]+' Cargo.toml)
           CLAP_VERSION=$(grep -oP 'clap = \{ version = "\K[^"]+' Cargo.toml)
           CLIPBOARD_VERSION=$(grep -oP 'clipboard = "\K[^"]+' Cargo.toml)
           
