ci: update release configuration to allow local version tagging and adjust release asset handling

--- a/.github/workflows/release-local.yml
+++ b/.github/workflows/release-local.yml
@@ -3,7 +3,7 @@ name: Release (Local Testing)
 on:
   push:
     tags:
-      - 'v*'
+      - 'localV*'
 
 # Explicitly define permissions needed for GitHub releases
 permissions:
