--- a/release-event.json
+++ b/release-event.json
@@ -1,4 +1,4 @@
 {
-  "ref": "refs/tags/v0.0.0-test",
-  "ref_name": "v0.0.0-test"
+  "ref": "refs/tags/localV0.0.0-test",
+  "ref_name": "localV0.0.0-test"
 }
