--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,10 +31,10 @@ jobs:
             target: x86_64-unknown-linux-gnu
             artifact_name: uuid
             asset_name: uuid-${{ needs.create-release.outputs.version }}-x86_64-linux
-#          - os: ubuntu-latest
-#            target: aarch64-unknown-linux-gnu
-#            artifact_name: uuid
-#            asset_name: uuid-${{ needs.create-release.outputs.version }}-aarch64-linux
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            artifact_name: uuid
+            asset_name: uuid-${{ needs.create-release.outputs.version }}-aarch64-linux
           - os: macos-latest
             target: x86_64-apple-darwin
             artifact_name: uuid
