--- a/Cross.toml
+++ b/Cross.toml
@@ -7,6 +7,9 @@ image = "ghcr.io/cross-rs/x86_64-apple-darwin:main"
 [target.aarch64-apple-darwin]
 image = "ghcr.io/cross-rs/aarch64-apple-darwin:main"
 
+[target.aarch64-unknown-linux-gnu]
+image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:main"
+
 # Install Python3 in all containers
 [target.'cfg(all())'.env]
 passthrough = [
