--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -260,6 +260,16 @@ jobs:
           }
           EOF
 
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          path: |
+            release-assets/uuid.rb
+            release-assets/uuid.json
+            release-assets/*.sha256
+          retention-days: 1
+
       - name: Create Release
         uses: ncipollo/release-action@v1.18.0
         with:
